--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,16 +37,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  nice_intro:
+
   validators: ^2.0.0
   font_awesome_flutter: ^10.4.0
   flutter_verification_code: ^1.1.6
   pinput:
   image_picker: ^0.8.6+4
-  video_player:
   percent_indicator: ^4.2.3
-
   flutter_svg:
+  video_player: ^2.6.0
+  nice_intro: ^0.2.1
+  material_design_icons_flutter: ^6.0.7096
 
 
 dev_dependencies:
