--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   video_player: ^2.6.0
   nice_intro: ^0.2.1
   material_design_icons_flutter: ^6.0.7096
+  dropdown_button2: ^2.0.0
 
 
 dev_dependencies:
