--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,6 @@ dependencies:
   validators: ^2.0.0
   font_awesome_flutter: ^10.4.0
   flutter_verification_code: ^1.1.6
-  pinput:
-
   image_picker: ^0.8.6+4
   percent_indicator: ^4.2.3
   flutter_svg:
@@ -50,7 +48,9 @@ dependencies:
   nice_intro: ^0.2.1
   material_design_icons_flutter: ^6.0.7096
   dropdown_button2: ^2.0.0
+  pinput: ^2.2.31
   audioplayers: ^3.0.1
+  google_fonts: ^3.0.1
 
 
 dev_dependencies:
