--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  validators: ^2.0.0
+  validators: ^3.0.0
   font_awesome_flutter: ^10.4.0
   flutter_verification_code: ^1.1.6
   image_picker: ^0.8.6+4
@@ -46,14 +46,20 @@ dependencies:
   video_player: ^2.6.0
   material_design_icons_flutter: ^6.0.7096
   dropdown_button2: ^2.0.0
-  audioplayers: ^3.0.1
-  google_fonts: ^3.0.1
-  pinput: ^2.2.21
+  audioplayers: ^4.1.0
+  google_fonts: ^4.0.4
   lottie: ^2.2.0
   shared_preferences: ^2.0.18
   intl:
   grouped_list:
   share: ^2.0.4
+  pinput: ^2.2.31
+  firebase_auth: ^4.6.1
+  firebase_core: ^2.13.0
+  cloud_firestore: ^4.7.1
+  modal_progress_hud_nsn: ^0.4.0
+  dio:
+
 
 
 
