--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,21 +44,33 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_svg:
   video_player: ^2.6.0
-  material_design_icons_flutter: ^6.0.7096
+  material_design_icons_flutter: ^7.0.7296
   dropdown_button2: ^2.0.0
   audioplayers: ^4.1.0
   google_fonts: ^4.0.4
-  lottie: ^2.2.0
+  lottie: ^2.4.0
   shared_preferences: ^2.0.18
   intl:
   grouped_list:
   share: ^2.0.4
   pinput: ^2.2.31
-  firebase_auth: ^4.6.1
-  firebase_core: ^2.13.0
-  cloud_firestore: ^4.7.1
-  modal_progress_hud_nsn: ^0.4.0
   dio:
+  record: ^4.4.4
+  path_provider: ^2.0.15
+  flutter_bloc: ^8.1.3
+  permission_handler: ^10.3.0
+  just_audio: ^0.9.34
+  equatable: ^2.0.5
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
+  modal_progress_hud_nsn: ^0.4.0
+  cloud_firestore: ^4.8.1
+  multiple_stream_builder: ^3.0.2
+  flutter_chat_ui: ^1.6.8
+  file_picker: ^5.3.2
+  open_filex: ^4.3.2
+
+
 
 
 
