--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,15 @@ dependencies:
   flutter_chat_ui: ^1.6.8
   file_picker: ^5.3.2
   open_filex: ^4.3.2
+  syncfusion_flutter_charts: ^22.1.34
+
+
+
+  url_launcher: ^6.1.0
+
+  path_provider_foundation: ^2.1.0
+  desktop_window: 0.4.0
+
 
 
 
